<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88E15A"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_info_24"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img_logo_snake"
        android:alpha="0.8"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>
    
    <Button
        android:id="@+id/btnPlay"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/btn_play"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:backgroundTint="#22CD15"
        android:drawableLeft="@drawable/ic_baseline_play_arrow_24"/>

    <Button
        android:id="@+id/btnHowToPlay"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_how_to_play"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:backgroundTint="#22CD15"
        android:drawableLeft="@drawable/ic_baseline_book_24"/>

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_setting"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:backgroundTint="#22CD15"
        android:drawableLeft="@drawable/ic_baseline_settings_24"/>

    <Button
        android:id="@+id/btnChange"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_change"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:backgroundTint="#22CD15"
        android:drawableLeft="@drawable/ic_baseline_cached_24"/>

</LinearLayout>